# WiringPi

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Config.cmake.in
wiringPi/: CMakeLists.txt  version.in.h  wiringPi.c
